--- a/mahjongtournamentmanager.client/src/app/login/login.component.css
+++ b/mahjongtournamentmanager.client/src/app/login/login.component.css
@@ -82,3 +82,17 @@ button[type="submit"] {
 .register-link-container {
   margin-top: 15px;
 }
+
+.password-group {
+  position: relative;
+}
+
+.toggle-password {
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #aaa;
+}
