--- a/mahjongtournamentmanager.client/src/app/login/login.component.html
+++ b/mahjongtournamentmanager.client/src/app/login/login.component.html
@@ -5,9 +5,10 @@
       <label for="username">ユーザー名:</label>
       <input type="text" id="username" [(ngModel)]="model.username" name="username" required>
     </div>
-    <div class="form-group">
+    <div class="form-group password-group">
       <label for="password">パスワード:</label>
-      <input type="password" id="password" [(ngModel)]="model.password" name="password" required>
+      <input [type]="showPassword ? 'text' : 'password'" id="password" [(ngModel)]="model.password" name="password" required>
+      <i class="fas toggle-password" [class.fa-eye-slash]="!showPassword" [class.fa-eye]="showPassword" (click)="togglePasswordVisibility()"></i>
     </div>
     <button type="submit">ログイン</button>
   </form>
