--- a/mahjongtournamentmanager.client/src/app/tournament-creation/tournament-creation.component.css
+++ b/mahjongtournamentmanager.client/src/app/tournament-creation/tournament-creation.component.css
@@ -102,3 +102,26 @@ button[type="submit"]:hover {
 .form-group select#gameTypeSelection {
   margin-bottom: 20px;
 }
+
+.form-row {
+  display: flex;
+  gap: 20px;
+}
+
+.form-row .form-group {
+  flex: 1;
+}
+
+@media (max-width: 768px) {
+  .tournament-creation-container {
+    margin: 0;
+    padding: 20px;
+    box-shadow: none;
+    border-radius: 0;
+  }
+
+  .form-row {
+    flex-direction: column;
+    gap: 0;
+  }
+}
