--- a/mahjongtournamentmanager.client/src/app/tournament-edit/tournament-edit.component.html
+++ b/mahjongtournamentmanager.client/src/app/tournament-edit/tournament-edit.component.html
@@ -1,31 +1,31 @@
-<div class="container">
+<div class="tournament-creation-container">
   <h2>企画情報編集</h2>
   <form [formGroup]="tournamentForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
+    <div class.form-group>
       <label for="tournamentName">企画名</label>
-      <input type="text" id="tournamentName" formControlName="tournamentName" class="form-control">
+      <input type="text" id="tournamentName" formControlName="tournamentName">
     </div>
     <div class="form-group">
       <label for="startDate">開始日</label>
-      <input type="date" id="startDate" formControlName="startDate" class="form-control">
+      <input type="date" id="startDate" formControlName="startDate">
     </div>
     <div class="form-group">
         <label for="endDate">終了日</label>
-        <input type="date" id="endDate" formControlName="endDate" class="form-control">
+        <input type="date" id="endDate" formControlName="endDate">
     </div>
 
     <h3>雀魂友人戦設定</h3>
     <div class="form-row">
       <div class="form-group">
         <label for="gameType">対戦形式</label>
-        <select id="gameType" formControlName="gameType" class="form-control" (change)="onGameTypeSelectionChange()">
+        <select id="gameType" formControlName="gameType" (change)="onGameTypeSelectionChange()">
           <option>ヨンマ</option>
           <option>サンマ</option>
         </select>
       </div>
       <div class="form-group">
         <label for="thinkTime">長考時間</label>
-        <select id="thinkTime" formControlName="thinkTime" class="form-control">
+        <select id="thinkTime" formControlName="thinkTime">
           <option>3+5</option>
           <option>5+10</option>
           <option>5+20</option>
@@ -33,26 +33,26 @@
           <option>300+0</option>
         </select>
       </div>
-      <div class="form-check">
-        <input type="checkbox" id="allowFlying" formControlName="allowFlying" class="form-check-input">
-        <label for="allowFlying" class="form-check-label">飛びあり</label>
+    </div>
+    <div class="form-row">
+      <div class="form-group checkbox-group">
+        <input type="checkbox" id="allowFlying" formControlName="allowFlying">
+        <label for="allowFlying">飛びあり</label>
       </div>
-      <div class="form-check">
-        <input type="checkbox" id="redDora" formControlName="redDora" class="form-check-input">
-        <label for="redDora" class="form-check-label">赤ドラあり</label>
-      </div>
-      <div class="form-group">
-        <label for="startingScore">配給原点</label>
-        <input type="number" id="startingScore" formControlName="startingScore" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="description">コメント</label>
-        <textarea id="description" formControlName="description" class="form-control" rows="4"></textarea>
+      <div class="form-group checkbox-group">
+        <input type="checkbox" id="redDora" formControlName="redDora">
+        <label for="redDora">赤ドラあり</label>
       </div>
     </div>
-    <button type="submit" [disabled]="tournamentForm.invalid" class="btn btn-primary">更新</button>
-    <div *ngIf="errorMessage" class="alert alert-danger mt-3">
-      {{ errorMessage }}
+    <div class="form-group">
+      <label for="startingScore">配給原点</label>
+      <input type="number" id="startingScore" formControlName="startingScore">
     </div>
+    <div class="form-group">
+      <label for="description">コメント</label>
+      <textarea id="description" formControlName="description" rows="4"></textarea>
+    </div>
+    <button type="submit" [disabled]="tournamentForm.invalid">更新</button>
+    <p *ngIf="errorMessage" class="message error">{{ errorMessage }}</p>
   </form>
 </div>
